@@ -1,5 +1,9 @@
 2004-03-24  Gautier Portet <kassoulet@gmail.com>
 
+	* Gracefully handled gnome.vfs deprecation (#3649)
+
+2004-03-24  Gautier Portet <kassoulet@gmail.com>
+
 	* Making release version 0.7
 
 2004-03-24  Gautier Portet <kassoulet@gmail.com>
